[package]
name = "wasm-md"
version = "0.1.0"
authors = ["Rik-KANO"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies]
wasm-bindgen = "0.2.92"
num-traits = "0.2"
